[project]
name = "datacommons-nl-server"
version = "0.1.0"
description = "Data Commons NL Server"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dacite==1.8.1",
    "datasets==2.18.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "Flask==2.3.2",
    "frozendict==2.3.4",
    "fsspec==2024.2.0",
    "google-cloud-aiplatform==1.125.0",
    "google-cloud-logging>=3.11.0,<4.0.0",
    "google-cloud-storage==3.0.0",
    "gunicorn==23.0.0",
    "huggingface_hub==0.36.0",
    "markupsafe==2.1.2",
    "numpy<2.0",
    "pandas==2.1.1",
    "parameterized==0.8.1",
    "safetensors==0.4.3",
    "scikit-learn==1.5.0",
    "sentence-transformers==2.7.0",
    "spacy==3.7.4",
    "torch==2.8.0",
    "torchvision",
    "transformers==4.53.0",
    "Werkzeug==3.1.5",
]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-xdist==3.2.1",
]

# Explicitly set pypi index as default for Cloud Build
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Add pytorch index
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
